Minor adjustments, readme added